<resources>
    <string name="app_name">Meet-on-the-road-of-UESTC</string>
    <string name="menu_nav">导航</string>
    <string name="menu_appointment">约吧</string>
    <string name="menu_home">首页</string>
    <string name="menu_help">帮帮</string>
    <string name="menu_me">我的</string>
    <string name="amap_access_token">87a80c85e4aa9a285be9fd546f8d576b</string>
    <string name="help">help</string>
    <string name="enter_account">请输入账户</string>
    <string name="enter_password">请输入密码</string>
    <string name="sign_in">Sign in</string>
    <string name="registered">注册账户</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="enter_search_place">请输入搜索的地点</string>
    <string name="distance">距离</string>
    <string name="sign_up">Sign Up</string>
    <string name="registerPassword">密码</string>
    <string name="regosterStuID">学号</string>
    <string name="registerName">姓名</string>
    <string name="registerAccount">用户名</string>
    <string name="registerByStuID">学号注册</string>
    <string name="registerDocument">《用户注册协议》</string>
    <string name="agreeDocument">阅读并同意</string>
    <string name="before_you_start">Before you start</string>
    <string name="setGoal">设定目标</string>
    <string name="start_running">Start Running</string>
    <string name="distanceText">距离</string>
    <string name="timeText">时间</string>
    <string name="speedText">速度</string>
    <string name="total_distance">总距离</string>
    <string name="total_time">总时间</string>
    <string name="ave_distance">平均速度</string>
    <string name="pause_running">暂停跑步</string>
    <string name="stop_running">结束跑步</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="choose_path">选择路径</string>
</resources>
