<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/container_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffebcd">

        <RelativeLayout
            android:id="@+id/menu_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_nav"
                android:textColor="#595959"/>
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:id="@+id/menu_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_appointment"
                android:textColor="#595959"/>
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:id="@+id/menu_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home"
                android:textColor="#595959"/>
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:id="@+id/menu_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_help"
                android:textColor="#595959"/>
        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:id="@+id/menu_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_me"
                android:textColor="#595959"/>
        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>