<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_gradient_login">
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:background="@drawable/shape_gradient_login"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:background="#ffffff">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_marginTop="100dp"
            android:id="@+id/login_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_account"
            android:maxLines="1" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_marginTop="150dp"
            android:id="@+id/login_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:maxLines="1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/login_button"
            android:background="@drawable/shape_gradient_loginbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="200dp"/>
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp">
        <TextView
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"/>
    </RelativeLayout>

        <CheckBox
            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="218dp"
            android:layout_marginTop="250dp"
            android:text="@string/remember_password" />
    </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView

            android:layout_width="230dp"
            android:layout_height="230dp"
            android:src="@mipmap/ic_login_pic" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/if_font_login" />
    </RelativeLayout>

</RelativeLayout>