<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/registerTopBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_background_yellow">
        <ImageView
            android:id="@+id/registerBack"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back"/>
        <TextView
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerByStuID"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/registerTopBar"
        android:id="@+id/linearLayoutInput"
        android:layout_marginTop="60sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="300sp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/registerAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registerAccount"
                android:textColor="#333"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="300sp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registerName"
                android:textColor="#333"
                android:textSize="15sp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="300sp">
            <EditText
                android:id="@+id/registerStuID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regosterStuID"
                android:textColor="#333"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300sp"
            android:layout_marginTop="10dp"

            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registerPassword"
                android:textColor="#333"
                android:textSize="15sp"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/signUpLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linearLayoutInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/shape_gradient_loginbutton"
            android:text="@string/sign_up"
            android:id="@+id/buttonSignUp"
            android:layout_width="300sp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/signUpLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/agreeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreeDocument" />
        <TextView
            android:textColor="@color/blue"
            android:id="@+id/registerDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户注册协议》"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/registerProgreeBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
</RelativeLayout>