<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_width="330sp"
    android:alpha="0.9"
    android:background="@color/white"
    android:layout_height="250sp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_running_details_topbar"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_marginTop="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanceText"/>
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/distanceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00 km "/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeText"/>
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeDetail"
                android:text="0:00:00"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedText"/>
            <TextView
                android:id="@+id/speedDetail"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0 m/s"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="135sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:max="100"
            android:id="@+id/runProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="180sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/pauseRun"
            android:background="@drawable/drawable_cilck"
            android:layout_marginRight="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_running"/>
        <Button
            android:id="@+id/stopRun"
            android:background="@drawable/drawable_cilck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_running"/>
    </LinearLayout>
</RelativeLayout>