<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient_login">
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="Well Down"/>

    <RelativeLayout
        android:elevation="6dp"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="500dp">
        <LinearLayout
            android:layout_marginTop="70sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300sp">
            <TextView
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_marginStart="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"/>
            <TextView
                android:id="@+id/total_distance"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00 KM"/>

            <TextView
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_marginStart="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_time"/>
            <TextView
                android:id="@+id/total_time"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00:00"/>
            <TextView
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_marginStart="35sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ave_distance"/>
            <TextView
                android:id="@+id/ave_speed"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00 M/S"/>/>
        </LinearLayout>

        <Button
            android:id="@+id/stopRunningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/drawable_cilck"
            android:text="@string/stop_running" />
    </RelativeLayout>
</LinearLayout>